# g8r-agent-shield-sdk

./: .gitignore  README.md  RELEASING.md
.github/workflows/: ci.yml  deprecate.yml  publish-python.yml  release.yml
docs/: ip-guard.config.json
js/: README.md  jest.config.js  jest.config.ts  package-lock.json  package.json  tsconfig.json  tsup.config.ts
js/__tests__/: credentials.test.ts  ids.test.ts  lineage.test.ts  logger.test.ts  parity.test.ts  redaction.test.ts  registration.test.ts  sdk.test.ts
js/scripts/: consumer-smoke-test.sh
js/src/: context.ts  ids.ts  index.ts  logger.ts  redaction.ts
python/: NOTICE  README.md  example_bedrock.py  pyproject.toml
python/g8r_shield/: __init__.py  _version.py  redaction.py  shield.py
python/tests/: conftest.py  test_redaction.py  test_shield.py
