[build-system]
# setuptools >=77 implements PEP 639 (`license` as SPDX string,
# `license-files` as a top-level project field). Older releases reject
# the SPDX form.
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "g8r-shield"
version = "0.1.0"
description = "G8R Agent Shield SDK — wrap LLM calls with enterprise policy enforcement, audit logging, and tenant isolation."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
requires-python = ">=3.10"
authors = [
    { name = "Gator Security" },
]
keywords = [
    "g8r",
    "agent-shield",
    "ai-governance",
    "ai-policy",
    "llm-guardrails",
    "policy-enforcement",
    "llm",
    "owasp-llm-top-10",
    "mitre-atlas",
    "compliance",
    "grc",
    "tenant-isolation",
    "audit-log",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.31",
    "structlog>=24.1",
]

[project.optional-dependencies]
bedrock = [
    "boto3>=1.34",
]
dev = [
    "pytest>=8",
    "pytest-mock>=3.12",
    "responses>=0.25",
    "ruff>=0.7",
    "black>=24",
    "mypy>=1.11",
]

[project.urls]
Homepage = "https://github.com/Gator-Security/g8r-agent-shield-sdk"
Repository = "https://github.com/Gator-Security/g8r-agent-shield-sdk"
Documentation = "https://github.com/Gator-Security/g8r-agent-shield-sdk/blob/main/python/README.md"
Issues = "https://github.com/Gator-Security/g8r-agent-shield-sdk/issues"
Changelog = "https://github.com/Gator-Security/g8r-agent-shield-sdk/releases"

[tool.setuptools.packages.find]
where = ["."]
include = ["g8r_shield*"]

# Ship the PEP 561 marker so type-checkers (mypy, pyright) consume our
# inline type hints. Without this file the `Typing :: Typed` classifier
# would be a false claim.
[tool.setuptools.package-data]
g8r_shield = ["py.typed"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["example_bedrock.py"]

[tool.ruff.lint]
select = [
  "E",    # pycodestyle errors
  "F",    # pyflakes
  "I",    # isort
  "B",    # bugbear
  "UP",   # pyupgrade
  "SIM",  # simplify
  "RET",  # return statements
  "TID",  # tidy imports
]
ignore = [
  "E501",  # line length handled by black
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # asserts in tests are fine

[tool.black]
line-length = 100
target-version = ["py310"]
extend-exclude = "example_bedrock\\.py"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
ignore_missing_imports = true   # requests has no stubs by default

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false   # test functions don't always need annotations
